@@ -23,4 +23,6 @@
 	<mount id="21" clientid="406" name="Sandstone Scorpion" speed="20" />
 	<mount id="22" clientid="421" name="Rented Horse" speed="20" />
 	<mount id="23" clientid="426" name="Fire War Horse" speed="20" />
+	<mount id="24" clientid="437" name="Rented Horse" speed="20" />
+	<mount id="25" clientid="438" name="Rented Horse" speed="20" />
 </mounts>
