@@ -27,6 +27,7 @@
 	M	actions/scripts/other/changegold.lua
 	M	items/items.xml
 	M	XML/outfits.xml
+	M	XML/mounts.xml
 ]
 
 [ Milestone
@@ -36,4 +37,11 @@
 	Removed the config option for animation text on heal.
 	Corrected the color of the healing numbers.
 	Corrected the new outfit looktypes.
+	Updated item description for expiration times.
+	Added more mounts.
+	Fixed element damage hit order.
+	The teleport effect will now show up when a creature is summoned.
+	Fixed hotkey message for items without showCount.
+	Healing message will now be precise on how much health the creature was healed up with.
+	Decay buckets are now 4, with 250ms intervals instead of 16 with 1000ms intervals for more accurate duration times (this may cause higher CPU usage).
 ]
